--- a/env.example
+++ b/env.example
@@ -4,5 +4,9 @@ VITE_FROM_EMAIL=apsotle1@gmail.com
 VITE_FROM_NAME=apsotle
 VITE_REPLY_TO_EMAIL=apsotle1@gmail.com
 
+# Push Notifications Configuration
+# Generate VAPID keys using: npx web-push generate-vapid-keys
+VITE_VAPID_PUBLIC_KEY=your_vapid_public_key_here
+
 # Development Settings
 VITE_SIMULATE_EMAILS=true
